--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     </div>
   </div>
 </div>
-<div class="section px-3 px-lg-4 pt-5" id="services">
+<div class="section px-3 px-lg-4 pt-5" id="skills">
   <div class="container-narrow">
     <div class="text-center mb-5">
       <h2 class="marker marker-center">My Skills</h2>
